[package]
name = "rulink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
#env_logger = "0.9"
log = "0.4"
sqlparser = "0.33"
thiserror = "1"
rustyline = "11"
bitvec = "1.0.1"
prettytable = "0.10.0"
enum_dispatch = "0.3.12"
itertools = "0.10"
async-stream = "0.3"
paste = "1"
smallvec = { version = "1", features = ["serde"] }
iter-chunks = "0.2"
bytes = "1"
#rocksdb = "0.21.0"
uuid = { version = "1.7.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}

pretty-xmlish = "0.1"

parse-display = "0.8"

regex = "1.10.3"
once_cell = "1.19.0"

futures = { version = "0.3", default-features = false, features = ["alloc"] }

tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "fs", "signal", "io-std", "io-util"] }
tokio-stream = "0.1"
egg = "0.9"

futures-async-stream = "0.2"


[dev-dependencies]
sqllogictest = "0.2"
test-case = "1.2"

